--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -8,13 +8,17 @@
     align-items: center;
     background-color: black;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     box-sizing: border-box;
     top: 0;
     z-index: 10;
     height: 10vh;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     color: white;
+    font-family: mi-fuente;
+    font-size: 1em;
+    white-space: nowrap;
+    transition: 0.3s ease;
 }
 .navBarScroll {
     display: flex;
@@ -24,7 +28,7 @@
     box-sizing: border-box;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     background-color: black;
     opacity: 0.7;
     transition: background-color 0.3s ease, opacity 0.3s ease; 
@@ -32,17 +36,28 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(5px);
     color: white;
+    font-family: mi-fuente;
+    white-space: nowrap;
+    transition: 0.3s ease;
     }
 .navOpen {
     display: flex;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: var(--color-nav);
     flex-direction: column;
     position: fixed;
     align-items: center;
-    top: 0;
     z-index: 10;
+    font-family: mi-fuente;
+    white-space: nowrap;
+    background-color: black;
+    color: white;
+    transition: 0.3s ease;
+}
+.navOpenContainer{
+    margin: 0;
+    padding: 0;
 }
 .navLink {
     display: flex;
@@ -55,6 +70,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 9vw;
+    height: 6vh
 }
 .navLink::before {
     content: '';
@@ -97,9 +114,10 @@
 }
 .contLogo{
     height: 100%;
-    width: 28vw;
+    width: 35vw;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
 }
 .contLogo:hover {
     cursor: pointer;
@@ -121,6 +139,11 @@
     width: 50vw;
     height: 8vh;
 }
+.menuNav {
+    margin: 0 10px 0 0;
+    height: 5vh;
+    width: 9vw; 
+}
 .menuNav, .closeNav {
     transition: 0.5s;
 }
@@ -134,9 +157,10 @@
 .border {
     animation-name: animacionborde;
     animation-duration: 1s;
-    background-color: black;
+    background-color: white;
     animation-fill-mode: forwards;
     margin-bottom: 50px;
+    width: 100%;
 }
 @keyframes animacionborde {
     0%{
@@ -146,13 +170,42 @@
         height: 2px;
     }
 }
-@media (max-width: 400px) {
+@media (max-width: 600px) {
+    .contLogo {
+        font-size: 0.6em;
+        width: 20vw;
+        font-size: 0.4em;
+        overflow: hidden;
+    }
+    .contLogo h2 {
+        opacity: 0;
+        height: 0;
+        width: 0;
+        font-size: 0em;
+    }
     .logo {
-        font-size: 1em;
+        height: 6vh;
+    }
+}
+@media (max-width: 400px) {
+    .contLogo {
+        font-size: 0.6em;
+        width: 20vw;
+        font-size: 0.4em;
+        overflow: hidden;
+    }
+    .contLogo h2 {
+        opacity: 0;
+        height: 0;
+        width: 0;
+        font-size: 0em;
+    }
+    .logo {
+        height: 6vh;
     }
 }
 @media (max-width: 310px) {
-    .logo {
+    .contLogo {
         font-size: 0.8em;
     }
 }
@@ -174,3 +227,7 @@
         margin: 150px 0 0px 0;
     }
 }
+@font-face{
+    font-family: mi-fuente;
+    src: url(../my-font.ttf);
+  }
