--- a/src/Screens/Contacto.module.css
+++ b/src/Screens/Contacto.module.css
@@ -7,6 +7,7 @@
     justify-content: center;
     font-size: 1.4em;
     color: white;
+    box-sizing: border-box;
 }
 .textContainer {
     display: flex;
@@ -15,6 +16,10 @@
     justify-content: center;
     height: 40vh;
     width: 50vw;
+    font-size: 1.3vw;
+}
+.textContainer h1 {
+    text-align: center;
 }
 .iconContainer {
     width: 100px;
@@ -56,7 +61,6 @@
   
 .mostrar {
    opacity: 0;
-   border: 1px solid white;
    width: 0px;
    height: 0px;
 }
@@ -65,3 +69,55 @@
     transition: opacity 1.4s ease;
     font-size: 0.9em;
 }
+@media (max-width: 600px){
+    .textContainer{
+        width: 90vw;
+        font-size: 0.7em;
+    }
+    .iconContainer{
+        width: 80vw;
+        font-size: 0em;
+    }
+    .iconContainer a {
+        width: 18vw;
+        display: flex;
+        justify-content: center;
+    }
+    .iconContainer .icon {
+        width: 18vw;
+        display: flex;
+        justify-content: center;
+    }
+    .IconoLit {
+        height: 40px;
+        width: 50px;
+    }
+    .celNumber{
+        width: 18vw;
+    }
+}   
+@media (max-width: 400px){
+    .textContainer{
+        width: 90vw;
+        font-size: 0.5em;
+
+    }
+    .iconContainer{
+        width: 80vw;
+        font-size: 0em;
+    }
+    .iconContainer a {
+        width: 18vw;
+    }
+    .iconContainer .icon {
+        width: 18vw;
+
+    }
+    .IconoLit {
+        height: 37px;
+        width: 50px;
+    }
+    .celNumber{
+        width: 18vw;
+    }
+}   
