--- a/src/Screens/Footer.module.css
+++ b/src/Screens/Footer.module.css
@@ -7,3 +7,21 @@
     align-items: center;
     border-top: 1.2vh solid black;
 }
+@media (max-width: 600px) {
+    .Footer {
+        font-size: 0.7em;
+    }
+    .Footer p {
+        height: 6vh;
+        margin: 0 4vw 0 5vw;
+    }
+}
+@media (max-width: 400px) {
+    .Footer {
+        font-size: 0.7em;
+    }
+    .Footer p {
+        height: 6vh;
+        margin: 0 2vw 0 5vw
+    }
+}
