--- a/src/Screens/Proyectos.module.css
+++ b/src/Screens/Proyectos.module.css
@@ -191,3 +191,159 @@
     height: 30px;
     width: 50px;
 }
+@media (max-width: 600px){
+    .proyecto1{
+        height: 18vh;
+        width: 70vw;
+    }
+    .proyecto1 .miniNav p {
+        display: flex;
+        align-items: center;
+        margin: 0;
+    }
+    .proyecto1 .miniNav {
+        width: 100%;
+        margin: 0;
+        height: 15%;
+        display: flex;
+        justify-content: center;
+    }
+    .contenido .DivImg {
+        height: 100%;
+        width: 100%;
+        border: 5px solid rgba(0, 0, 0, 0);
+        position: absolute;
+        box-sizing: border-box;
+    }
+    .contenido {
+        width: 100%;
+        height: 85%;
+        margin: 0;
+        position: relative;
+    }
+    .img1 {
+        height: 100%;
+        width: 100%;
+    }
+    .containerProyects {
+        height: 74vh;
+        width: 80vw;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    .divImgOpen{
+        height: 1vh;
+        width: 2vw;
+    }
+    .imgPrincipal{
+        height: 86%;
+        width: 90%;
+    }
+    .openVentana {
+        width: 74vw;
+        height: 70vh;
+    }
+    .openVentana .contenido{
+        background-color: rgb(32, 32, 32);
+        width: 94%;
+        height: 93%;
+        border-radius: 5px;
+        margin: 0 0 6px 0 ;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 160px 26vh 10vh 10vh;
+        font-size: 0.8em;
+    }
+    .logos img {
+        height: 5vh;
+    }
+    .logos {
+        height: 10vh;
+    }
+    .contButtons button{
+        width: 20vw;
+        height: 4vh;
+        border-radius: 5px;
+    }
+    .openVentana .miniNav {
+        font-size: 0.9em;
+        height: 7%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .openVentana .miniNav p {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        margin-left: 2vw;
+    }
+    .close {
+        height: 3vh;
+        width: 9vw;
+    }
+}
+@media (max-width: 400px){
+    .proyecto1{
+        height: 19.3vh;
+        width: 70vw;
+    }
+    .containerProyects {
+        height: 74vh;
+        width: 80vw;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    .divImgOpen{
+        height: 1vh;
+        width: 2vw;
+    }
+    .imgPrincipal{
+        height: 86%;
+        width: 90%;
+    }
+    .openVentana {
+        width: 70vw;
+        height: 70vh;
+    }
+    .openVentana .contenido{
+        background-color: rgb(32, 32, 32);
+        width: 94%;
+        height: 93%;
+        border-radius: 5px;
+        margin: 0 0 6px 0 ;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 130px 170px 70px 100px;
+        font-size: 0.6em;
+    }
+    .logos img {
+        height: 5vh;
+    }
+    .contButtons button{
+        width: 20vw;
+        height: 4vh;
+        border-radius: 5px;
+    }
+    .openVentana .miniNav {
+        font-size: 0.9em;
+        height: 7%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .openVentana .miniNav p {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        margin-left: 2vw;
+    }
+    .close {
+        height: 3vh;
+        width: 9vw;
+    }
+}
