--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -48,7 +48,7 @@
     flex-direction: column;
     position: fixed;
     align-items: center;
-    z-index: 10;
+    z-index: 100;
     font-family: mi-fuente;
     white-space: nowrap;
     background-color: black;
@@ -121,6 +121,7 @@
 }
 .contLogo:hover {
     cursor: pointer;
+    opacity: 0.8;
 }
 .logo {
     height: 100%;
@@ -212,11 +213,16 @@
 @media (min-height: 1300px){
     .navBar {
         height: 220px;
-        font-size: 2.5em;
+        font-size: 1.8em;
+    }
+    .navBarScroll {
+        font-size: 1.8em;
+        height: 220px;
     }
     .menuNav {
         height: 8vh;
         width: 8vw;
+        margin-right: 30px;
     }
     .closeNav {
         height: 10vh;
@@ -225,6 +231,19 @@
     .navLink {
         font-size: 4.5em;
         margin: 150px 0 0px 0;
+    }
+    .logo{
+        height: 120px;
+    }
+}
+@media (min-height: 1700px){
+    .navBar {
+        height: 220px;
+        font-size: 1.4em;
+    }
+    .navBarScroll {
+        height: 220px;
+        font-size: 1.4em;
     }
 }
 @font-face{
