--- a/src/Screens/Footer.module.css
+++ b/src/Screens/Footer.module.css
@@ -25,3 +25,12 @@
         margin: 0 2vw 0 5vw
     }
 }
+@media (min-height: 1300px){
+    .Footer {
+        font-size: 1.5vh;
+    }
+    .Footer p {
+        height: 6vh;
+        margin: 0 2vw 0 5vw
+    }
+}
