--- a/src/Screens/Contacto.module.css
+++ b/src/Screens/Contacto.module.css
@@ -32,8 +32,8 @@
 .icon {
     text-decoration: none;
     color: white;
-    height: 7vh;
-    width: 9vw;
+    height: 80px;
+    width: 80px;
     display: flex;
     align-items: center;
     justify-content:space-evenly;
@@ -45,29 +45,9 @@
     cursor: pointer;
     transition: 0.3s ease;
 }
-.celNumber {
-    width: 20vw;
-    height: 7vh;
-    border-radius: 15px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    transition: width 0.3s ease;
-}
-.celNumber:hover{
-    cursor: pointer;
-    box-shadow:  0px 4px 10px 6px rgba(0, 0, 0, 0.5);
-}
-  
-.mostrar {
-   opacity: 0;
-   width: 0px;
-   height: 0px;
-}
-.noMostrar {
-    opacity: 1;
-    transition: opacity 1.4s ease;
-    font-size: 0.9em;
+.IconoLit{
+    height: 50px;
+    width: auto;
 }
 @media (max-width: 900px){
     .textContainer{
@@ -92,9 +72,6 @@
         height: 40px;
         width: 50px;
     }
-    .celNumber{
-        width: 18vw;
-    }
 }   
 @media (max-width: 400px){
     .textContainer{
@@ -117,19 +94,15 @@
         height: 37px;
         width: 50px;
     }
-    .celNumber{
-        width: 18vw;
-    }
 }   
 @media (min-height: 1300px){
     .textContainer{
         width: 90vw;
-        font-size: 2em;
+        font-size: 1.9em;
     }
     .iconContainer{
         width: 90vw;
         height: 15vh;
-        font-size: 0em;
     }
     .iconContainer a {
         width: 18vw;
@@ -145,13 +118,4 @@
         height: 8vh;
         width: 10vw;
     }
-    .celNumber{
-        width: 18vw;
-    }
-    .noMostrar {
-        opacity: 0;
-        width: 0;
-        height: 0;
-        font-size: 0;
-     }
 }
