--- a/src/Screens/Proyectos.module.css
+++ b/src/Screens/Proyectos.module.css
@@ -18,11 +18,10 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
     place-items: center;
-    overflow-x: auto;
 }
 .proyecto1{
     height: 25vh;
-    width: 300px;
+    width: 19vw;
     background-color: rgba(237, 231, 231, 0.3);
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
@@ -33,9 +32,10 @@
     justify-content: center;
     transition: width 0.3s ease, height 0.3s ease ;
     margin: 30px;
+    font-size: 1vw;
 }
 .proyecto1:hover{
-    width: 320px;
+    width: 20vw;
     height: 185px;
     cursor: pointer;
     transition: width 0.3s ease-in-out, height 0.3s ease-in-out, box-shadow 0.3s ease ;
@@ -175,6 +175,7 @@
         width: 290px;
         margin-left: 5vw;
         margin-right: 5vw;
+        font-size: 1em;
     }
     .proyecto1:hover{
         height: 160px;
@@ -320,7 +321,7 @@
         width: 55vw;
         margin-left: 10vw;
         margin-right: 5vw;
-        
+        font-size: 1em;
     }
     .proyecto1:hover{
         height: 16vh;
