--- a/src/Screens/Tecnologias.module.css
+++ b/src/Screens/Tecnologias.module.css
@@ -74,6 +74,9 @@
 .logoD3 {
     height: 100px;
 }
+.logoSQL {
+    height: 100px;
+}
 .lvlJS {
     background: linear-gradient(to top, green 70%, white 30%);
     height: 125px;
@@ -152,6 +155,17 @@
     align-items: flex-end;
     color: white;
 }
+.lvlSQL {
+    background: linear-gradient(to top, green 40%, white 40%);
+    height: 125px;
+    width: 92px;
+    border-radius: 15px;
+    transition: height 0.3s ease, width 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    color: white;
+}
 @media (max-width: 700px){
     .Tecnologias {
         height: 80vh;
@@ -163,7 +177,7 @@
     .Container{
         height: 60vh;
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
+        grid-template-columns: repeat(8, 1fr);
         grid-row: repeat(3, 1fr);
         align-items: center;
         justify-content: flex-start;
@@ -196,7 +210,10 @@
     .logoD3 {
         height: 10vh;
     }
-    .lvlHtml, .lvlCss, .lvlJS, .lvlReact, .lvlRedux, .lvlD3, .lvlBootstrap {
+    .logoSQL {
+        height: 10vh;
+    }
+    .lvlHtml, .lvlCss, .lvlJS, .lvlReact, .lvlRedux, .lvlD3, .lvlBootstrap, .lvlSQL {
         margin: 0 30px 0 30px
     }
 }
@@ -208,7 +225,7 @@
     .Container{
         height: 60vh;
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
+        grid-template-columns: repeat(8, 1fr);
         grid-row: repeat(3, 1fr);
         align-items: center;
         justify-content: flex-start;
@@ -240,7 +257,10 @@
     .logoD3 {
         height: 14vh;
     }
-    .lvlHtml, .lvlCss, .lvlJS, .lvlReact, .lvlRedux, .lvlD3, .lvlBootstrap {
+    .logoSQL {
+        height: 14vh;
+    }
+    .lvlHtml, .lvlCss, .lvlJS, .lvlReact, .lvlRedux, .lvlD3, .lvlBootstrap, .lvlSQL {
         margin: 0 30px 0 30px;
     }
 }
@@ -257,7 +277,7 @@
     .Container{
         height: 60vh;
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
+        grid-template-columns: repeat(8, 1fr);
         grid-row: repeat(3, 1fr);
         align-items: center;
         justify-content: flex-start;
@@ -290,7 +310,10 @@
     .logoD3 {
         height: 14vh;
     }
-    .lvlHtml, .lvlCss, .lvlJS, .lvlReact, .lvlRedux, .lvlD3, .lvlBootstrap {
+    .logoSQL {
+        height: 14vh;
+    }
+    .lvlHtml, .lvlCss, .lvlJS, .lvlReact, .lvlRedux, .lvlD3, .lvlBootstrap, .lvlSQL {
         margin: 0 2vw 0 10vw;
         height: 14vh;
         width: 22vw;
